fix: invalid theme on pane restoration